Allow more web-platform-tests to fail

--- a/test/web-platform-tests/to-run.yaml
+++ b/test/web-platform-tests/to-run.yaml
@@ -1,11 +1,81 @@
 DIR: webrtc
 
-RTCCertificate.html: [fail, 'RTCPeerConnection.generateCertificate is not a function']
-RTCConfiguration-bundlePolicy.html: [fail, 'pc.setConfiguration is not a function']
-RTCConfiguration-iceCandidatePoolSize.html: [fail, 'assert_idl_attribute: property "getConfiguration" found on object expected in prototype chain']
-RTCConfiguration-iceServers.html: [fail, 'assert_equals: expected (undefined) undefined but got (object) []']
-RTCConfiguration-iceTransportPolicy.html: [fail, 'pc.setConfiguration is not a function']
-RTCConfiguration-rtcpMuxPolicy.html: [fail, 'assert_idl_attribute: property "setConfiguration" not found in prototype chain']
-RTCDTMFSender-insertDTMF.https.html: [fail, 'pc.addTransceiver is not a function']
-RTCDTMFSender-ontonechange-long.https.html: [fail, "Cannot read property 'getUserMedia' of undefined"]
-RTCDTMFSender-ontonechange.https.html: [fail, "Cannot read property 'getUserMedia' of undefined"]
+RTCCertificate.html: [fail]
+RTCConfiguration-bundlePolicy.html: [fail]
+RTCConfiguration-iceCandidatePoolSize.html: [fail]
+RTCConfiguration-iceServers.html: [fail]
+RTCConfiguration-iceTransportPolicy.html: [fail]
+RTCConfiguration-rtcpMuxPolicy.html: [fail]
+RTCDTMFSender-insertDTMF.https.html: [fail]
+RTCDTMFSender-ontonechange-long.https.html: [fail]
+RTCDTMFSender-ontonechange.https.html: [fail]
+RTCDataChannel-bufferedAmount.html: [fail]
+RTCDataChannel-id.html: [fail]
+RTCDataChannel-send.html: [fail]
+RTCDataChannelEvent-constructor.html: [fail]
+RTCDtlsTransport-getRemoteCertificates.html: [fail]
+RTCIceCandidate-constructor.html: [fail]
+RTCIceTransport.html: [fail]
+RTCPeerConnection-addIceCandidate.html: [fail]
+RTCPeerConnection-addTrack.https.html: [fail]
+RTCPeerConnection-addTransceiver.html: [fail]
+RTCPeerConnection-canTrickleIceCandidates.html: [fail]
+RTCPeerConnection-connectionState.html: [fail]
+RTCPeerConnection-constructor.html: [fail]
+RTCPeerConnection-createAnswer.html: [fail]
+RTCPeerConnection-createDataChannel.html: [fail]
+RTCPeerConnection-createOffer-offerToReceive.html: [fail]
+RTCPeerConnection-createOffer.html: [fail]
+RTCPeerConnection-generateCertificate.html: [fail]
+RTCPeerConnection-getDefaultIceServers.html: [fail]
+RTCPeerConnection-getIdentityAssertion.html: [fail]
+RTCPeerConnection-getStats.https.html: [fail]
+RTCPeerConnection-getTransceivers.html: [fail]
+RTCPeerConnection-iceConnectionState.html: [fail]
+RTCPeerConnection-iceGatheringState.html: [fail]
+RTCPeerConnection-ondatachannel.html: [fail]
+RTCPeerConnection-onnegotiationneeded.html: [fail]
+RTCPeerConnection-ontrack.https.html: [fail]
+RTCPeerConnection-peerIdentity.html: [fail]
+RTCPeerConnection-removeTrack.https.html: [fail]
+RTCPeerConnection-setDescription-transceiver.html: [fail]
+RTCPeerConnection-setLocalDescription-answer.html: [fail]
+RTCPeerConnection-setLocalDescription-offer.html: [fail]
+RTCPeerConnection-setLocalDescription-pranswer.html: [fail]
+RTCPeerConnection-setLocalDescription-rollback.html: [fail]
+RTCPeerConnection-setLocalDescription.html: [fail]
+RTCPeerConnection-setRemoteDescription-answer.html: [fail]
+RTCPeerConnection-setRemoteDescription-offer.html: [fail]
+RTCPeerConnection-setRemoteDescription-pranswer.html: [fail]
+RTCPeerConnection-setRemoteDescription-replaceTrack.https.html: [fail]
+RTCPeerConnection-setRemoteDescription-rollback.html: [fail]
+RTCPeerConnection-setRemoteDescription-tracks.https.html: [fail]
+RTCPeerConnection-setRemoteDescription.html: [fail]
+RTCPeerConnection-track-stats.https.html: [fail]
+RTCPeerConnectionIceEvent-constructor.html: [fail]
+RTCRtpParameters-codecs.html: [fail]
+RTCRtpParameters-degradationPreference.html: [fail]
+RTCRtpParameters-encodings.html: [fail]
+RTCRtpParameters-headerExtensions.html: [fail]
+RTCRtpParameters-rtcp.html: [fail]
+RTCRtpParameters-transactionId.html: [fail]
+RTCRtpReceiver-getCapabilities.html: [fail]
+RTCRtpReceiver-getContributingSources.https.html: [fail]
+RTCRtpReceiver-getParameters.html: [fail]
+RTCRtpReceiver-getStats.html: [fail]
+RTCRtpReceiver-getSynchronizationSources.https.html: [fail]
+RTCRtpSender-getCapabilities.html: [fail]
+RTCRtpSender-getStats.https.html: [fail]
+RTCRtpSender-replaceTrack.html: [fail]
+RTCRtpSender-setParameters.html: [fail]
+RTCRtpTransceiver-setCodecPreferences.html: [fail]
+RTCRtpTransceiver-setDirection.html: [fail]
+RTCSctpTransport-constructor.html: [fail]
+RTCSctpTransport-maxMessageSize.html: [fail]
+RTCTrackEvent-constructor.html: [fail]
+datachannel-emptystring.html: [fail]
+getstats.html: [fail]
+interfaces.https.html: [fail]
+no-media-call.html: [fail]
+promises-call.html: [fail]
+simplecall.https.html: [fail]
